--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sweetalert": "^2.0.8",
     "vue": "^2.5.2",
     "vue-property-decorator": "^6.0.0",
-    "vue-resource": "^1.3.5"
+    "vue-resource": "^1.3.5",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
