--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
   },
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "bootstrap": "4.0.0-beta.2",
-    "bootstrap-vue": "^1.3.0",
-    "element-ui": "^2.0.8",
-    "sweetalert": "^2.0.8",
     "vue": "^2.5.2",
     "vue-property-decorator": "^6.0.0",
     "vue-resource": "^1.3.5",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "0.17.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -34,7 +31,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.8",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
