--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "dateformat": "^3.0.2",
     "vue": "^2.5.2",
     "vue-property-decorator": "^6.0.0",
     "vue-resource": "^1.3.5",
