--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "dateformat": "^3.0.2",
+    "golos-js": "0.5.28",
+    "secure-ls": "^1.1.0",
     "vue": "^2.5.2",
     "vue-property-decorator": "^6.0.0",
     "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1",
-    "vuetify": "0.17.6"
+    "vuetify": "0.17.6",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
