--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-property-decorator": "^6.0.0",
     "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1",
+    "vuelidate": "^0.6.1",
     "vuetify": "0.17.6",
     "vuex": "^3.0.1"
   },
