--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-router": "^3.0.1",
     "vuelidate": "^0.6.1",
     "vuetify": "0.17.6",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "wallet-address-validator": "^0.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
