--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "dateformat": "^3.0.2",
-    "golos-js": "0.5.28",
+    "golos-js": "^0.5.30",
     "secure-ls": "^1.1.0",
     "vue": "^2.5.2",
     "vue-property-decorator": "^6.0.0",
