--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.6.1",
-    "vuetify": "0.17.6",
+    "vuetify": "^1.0.1",
     "vuex": "^3.0.1",
     "wallet-address-validator": "^0.1.1"
   },
