--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "dateformat": "^3.0.2",
     "golos-js": "^0.5.30",
+    "logrocket": "^0.6.9",
+    "logrocket-vuex": "^0.0.3",
     "secure-ls": "^1.1.0",
     "vue": "^2.5.2",
+    "vue-heatmapjs": "^1.3.0",
     "vue-property-decorator": "^6.0.0",
     "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1",
