Remove ESLint; Eventually add unit testing

--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,11 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime", "transform-decorators-legacy"]
+  "plugins": ["transform-vue-jsx", "transform-runtime", "transform-decorators-legacy"],
+  "env": {
+    "test": {
+      "presets": ["env", "stage-2"],
+      "plugins": ["transform-vue-jsx", "istanbul", "transform-decorators-legacy"]
+    }
+  }
 }
