--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vuetify": "^1.0.1",
     "vuex": "^3.0.1",
     "vuex-map-fields": "^1.1.2",
+    "vuex-persist": "^1.1.3",
     "wallet-address-validator": "^0.1.1"
   },
   "devDependencies": {
